# register-demo-app

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  env.example  manage_deps.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  sonar-project.properties  test_app.py
.github/workflows/: build.yml
cursor-chat/: 1-cursor_build_a_flask_web_app_with_postg.md  2-cursor_fix_missing_lockfile_for_require.md
templates/: index.html
